changed the way the resources are loaded